--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -27,26 +27,18 @@ jobs:
       - name: Build sig-fuzz
         run: zig build -Dcpu=haswell --summary all
 
-      - name: Download solfuzz_agave Artifacts
+      - name: Download Artifacts
         env: 
           PAT: ${{ secrets.PAT }}
         run: ./scripts/download_artifacts.sh
-
-      - name: Download SolFuzz Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          github-token: ${{ secrets.PAT }}
-          repository: firedancer-io/solfuzz
-          run-id: ${{ github.event.client_payload.run_id}}
-          name: solfuzz-bins
-          path: ./temp
-    
       - name: Bundle
         run: ./scripts/bundle.sh
 
-      - run: ls -R bundle
-
-      - run: |
-          mkdir result
-          unzip bundle/fuzz.zip -d result/
+      - name: upload to FuzzCorp
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AKID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SKID }}
+          AWS_DEFAULT_REGION: us-east-2
+        run: |
+          aws s3 cp ./bundle/fuzz.zip s3://fuzzcorp-bundle-dropbox-975049986498-86c13d2/org_AAAAAAAT/prj_AAAAAAATADU/$(date +%s).zip
  
